rnc/src/snapshots/muffy_rnc__tests__parse_file-22.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [],
    body: Grammar(
        Grammar {
            items: [
                Definition(
                    Definition {
                        name: "scripting.attr.form.select",
                        combine: None,
                        pattern: Attribute {
                            name_class: Name(
                                Name {
                                    prefix: None,
                                    local: "onselect",
                                },
                            ),
                            pattern: Name(
                                Name {
                                    prefix: None,
                                    local: "string",
                                },
                            ),
                        },
                    },
                ),
                Definition(
                    Definition {
                        name: "scripting.attr.form.change",
                        combine: None,
                        pattern: Attribute {
                            name_class: Name(
                                Name {
                                    prefix: None,
                                    local: "onchange",
                                },
                            ),
                            pattern: Name(
                                Name {
                                    prefix: None,
                                    local: "string",
                                },
                            ),
                        },
                    },
                ),
                Definition(
                    Definition {
                        name: "scripting.attr.form.submit",
                        combine: None,
                        pattern: Attribute {
                            name_class: Name(
                                Name {
                                    prefix: None,
                                    local: "onsubmit",
                                },
                            ),
                            pattern: Name(
                                Name {
                                    prefix: None,
                                    local: "string",
                                },
                            ),
                        },
                    },
                ),
                Definition(
                    Definition {
                        name: "scripting.attr.form.reset",
                        combine: None,
                        pattern: Attribute {
                            name_class: Name(
                                Name {
                                    prefix: None,
                                    local: "onreset",
                                },
                            ),
                            pattern: Name(
                                Name {
                                    prefix: None,
                                    local: "string",
                                },
                            ),
                        },
                    },
                ),
            ],
        },
    ),
}
