rnc/src/snapshots/muffy_rnc__tests__parse_file-35.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: "inkscape",
                uri: "http://www.inkscape.org/namespaces/inkscape",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "sodipodi",
                uri: "http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "none",
                uri: "",
            },
        ),
    ],
    body: Grammar(
        Grammar {
            items: [
                Define(
                    Definition {
                        name: "sodipodi.anyempty.elem",
                        combine: None,
                        pattern: Element {
                            name_class: NsName(
                                Some(
                                    "sodipodi",
                                ),
                            ),
                            pattern: Interleave(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "sodipodi.anyempty.inner",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "sodipodi.anyempty.attrs",
                                        },
                                    ),
                                ],
                            ),
                        },
                    },
                ),
                Define(
                    Definition {
                        name: "sodipodi.anyempty.attrs",
                        combine: None,
                        pattern: Interleave(
                            [
                                Name(
                                    Name {
                                        prefix: None,
                                        local: "inkscape.attrs",
                                    },
                                ),
                                Many0(
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "inkscape.nonamespace.anyattr",
                                        },
                                    ),
                                ),
                            ],
                        ),
                    },
                ),
                Define(
                    Definition {
                        name: "sodipodi.anyempty.inner",
                        combine: None,
                        pattern: Empty,
                    },
                ),
                Define(
                    Definition {
                        name: "inkscape.anyempty.elem",
                        combine: None,
                        pattern: Element {
                            name_class: NsName(
                                Some(
                                    "inkscape",
                                ),
                            ),
                            pattern: Interleave(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "inkscape.anyempty.inner",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "inkscape.anyempty.attrs",
                                        },
                                    ),
                                ],
                            ),
                        },
                    },
                ),
                Define(
                    Definition {
                        name: "inkscape.anyempty.attrs",
                        combine: None,
                        pattern: Interleave(
                            [
                                Name(
                                    Name {
                                        prefix: None,
                                        local: "inkscape.attrs",
                                    },
                                ),
                                Many0(
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "inkscape.nonamespace.anyattr",
                                        },
                                    ),
                                ),
                            ],
                        ),
                    },
                ),
                Define(
                    Definition {
                        name: "inkscape.anyempty.inner",
                        combine: None,
                        pattern: Empty,
                    },
                ),
                Define(
                    Definition {
                        name: "inkscape.elem",
                        combine: None,
                        pattern: Choice(
                            [
                                Name(
                                    Name {
                                        prefix: None,
                                        local: "sodipodi.anyempty.elem",
                                    },
                                ),
                                Name(
                                    Name {
                                        prefix: None,
                                        local: "inkscape.anyempty.elem",
                                    },
                                ),
                            ],
                        ),
                    },
                ),
                Define(
                    Definition {
                        name: "inkscape.attrs",
                        combine: None,
                        pattern: Interleave(
                            [
                                Many0(
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "inkspace.anyattr",
                                        },
                                    ),
                                ),
                                Many0(
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "sodipodi.anyattr",
                                        },
                                    ),
                                ),
                            ],
                        ),
                    },
                ),
                Define(
                    Definition {
                        name: "inkspace.anyattr",
                        combine: None,
                        pattern: Attribute {
                            name_class: NsName(
                                Some(
                                    "inkscape",
                                ),
                            ),
                            pattern: Name(
                                Name {
                                    prefix: None,
                                    local: "string",
                                },
                            ),
                        },
                    },
                ),
                Define(
                    Definition {
                        name: "sodipodi.anyattr",
                        combine: None,
                        pattern: Attribute {
                            name_class: NsName(
                                Some(
                                    "sodipodi",
                                ),
                            ),
                            pattern: Name(
                                Name {
                                    prefix: None,
                                    local: "string",
                                },
                            ),
                        },
                    },
                ),
                Define(
                    Definition {
                        name: "inkscape.nonamespace.anyattr",
                        combine: None,
                        pattern: Attribute {
                            name_class: NsName(
                                Some(
                                    "none",
                                ),
                            ),
                            pattern: Name(
                                Name {
                                    prefix: None,
                                    local: "string",
                                },
                            ),
                        },
                    },
                ),
                Define(
                    Definition {
                        name: "SVG.Core.extra.attrib",
                        combine: Some(
                            Interleave,
                        ),
                        pattern: Name(
                            Name {
                                prefix: None,
                                local: "inkscape.attrs",
                            },
                        ),
                    },
                ),
                Define(
                    Definition {
                        name: "SVG.defs.content",
                        combine: Some(
                            Interleave,
                        ),
                        pattern: Many0(
                            Name(
                                Name {
                                    prefix: None,
                                    local: "inkscape.elem",
                                },
                            ),
                        ),
                    },
                ),
                Define(
                    Definition {
                        name: "SVG.g.content",
                        combine: Some(
                            Interleave,
                        ),
                        pattern: Many0(
                            Name(
                                Name {
                                    prefix: None,
                                    local: "inkscape.elem",
                                },
                            ),
                        ),
                    },
                ),
                Define(
                    Definition {
                        name: "SVG.svg.content",
                        combine: Some(
                            Interleave,
                        ),
                        pattern: Many0(
                            Name(
                                Name {
                                    prefix: None,
                                    local: "inkscape.elem",
                                },
                            ),
                        ),
                    },
                ),
            ],
        },
    ),
}
