rnc/src/snapshots/muffy_rnc__tests__parse_file-38.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Define(
                        Definition {
                            name: "SVG.onbegin.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: "onbegin",
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: "Script.datatype",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.onend.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: "onend",
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: "Script.datatype",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.onrepeat.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: "onrepeat",
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: "Script.datatype",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.AnimationEvents.extra.attrib",
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.AnimationEvents.attrib",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.onbegin.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.onend.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.onrepeat.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.onload.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.AnimationEvents.extra.attrib",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
